2012-04-18  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php: Several esthetic changes.

2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>
	
	* godmode/agentes/agent_manager.php: Fixed a problem with links
	and new menu strcuture.

2012-04-18 Dario Rodriguez <dario.rodriguez@artica.es>

	* godmode/agentes/agent_disk_conf_editor.php: Print message
	using new message box

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* images/clock2.php: Include image.
2012-04-17 Sancho Lerena <slerena@artica.es>

	* install.php: Fixed some messages and version number.

2012-04-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_manager.php: Changed layout in 
	license dialog window.

2012-04-17 Miguel de Dios <miguel.dedios@artica.es>
	
	* include/functions_html.php, extensions/net_tools.php: cleaned
	source code style.
	
	* include/functions_networkmap.php: into the functions
	"networkmap_generate_dot" and "networkmap_create_agent_node"
	added new parameter $relative for set the url of icons as relative.
	It is used in networmap enterprise.
	
	* include/functions_ui.php: fixed into the function
	"ui_print_message" lost the javascript code when the first messages
	are without close button. And into the function "ui_print_os_icon"
	added new parameter $relative for set the url of icons as relative.
	It is used in networmap enterprise.

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* operation/tree.php: Exclude graph bar.

2012-04-17  Vanessa Gil  <vanessa.gil@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: Fixed
	bug: In the item list of a report appears a wrong period.

2012-04-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* extensions/update_license_info.php: Delete innecesary extension.

2012-04-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* include/functions_html.php
	 include/styles/pandora.css
	 include/javascript/jquery.pandora.js
	 include/functions_config.php
	 extensions/update_manager.php